spectec/test/elab/neg/parse-unclosed-text-literal.spectec
;; A text literal opens with `"` but reaches end of line without closing.

"abc
